<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- tmp -->
    <string name="hello_world">Hello world!</string>
    <!-- title -->
    <string name="app_name">WorkshiftCounter</string>
    <string name="title_activity_application_setting">ApplicationSetting</string>
    <string name="title_activity_multi_selection_menu">MultiSelectionMenu</string>
    <string name="title_activity_manage_work_shift">ManageWorkShift</string>
    <string name="title_activity_development_dbutility">DevelopmentDBUtility</string>
    <string name="title_activity_create_work_shift">CreateWorkShift</string>
    <string name="title_activity_display_work_shift">DisplayWorkShift</string>
    <string name="title_activity_select_hours">SelectHours</string>
    <string name="title_activity_displays_work_shift">DisplaysWorkShift</string>
    <string name="title_activity_display">Display</string>
    <string name="title_activity_add_overtime">AddOvertime</string>
    <string name="title_activity_manage_overtime">ManageOvertime</string>
    <string name="title_activity_displays_mounth">DisplaysMounth</string>
    <string name="title_activity_select_mounth">SelectMounth</string>
    <string name="title_activity_mounth_selection">MounthSelection</string>
    <string name="title_activity_visual_year">VisualYear</string>
    <string name="title_activity_starling_hours">StarlingHours</string>
    <!-- Start voice -->
    <string name="title_app_upper">CONTA ORE</string>
    <!-- application setting voice -->
    <string name="setting">IMPOSTAZIONI</string>
    <string name="orecontratto">ORE</string>
    <string name="allarm">Attivare Allarme prima del turno</string>
    <string name="notifiche">Attivare Notifiche</string>
    <!-- MultiSelectionMenu voice -->
    <string name="manageTurn">Gestisci Turni</string>
    <string name="visualTurn">Visualizza turni</string>
    <string name="visualSettimana">Visualizza Ore Settimana</string>
    <string name="displayH">Visualizza ore mensili</string>
    <string name="displayY">Visualizza ore annuali</string>
    <!-- <string name="visualM">visualizza anno</string> -->
    <string name="addExtraordinary">Aggiungi straordinari</string>
    <string name="starling">Storno ore</string>
    <string name="modifica_turni">Modifica turni</string>
    <string name="settingbutton">Configurazione</string>
    <!-- CreateWorkShift voice -->
    <string name="title_turn_menu">INSERISCI TURNO:</string>
    <string name="inserisci_mattina">Turno mattina</string>
    <string name="inserisci_pomeriggio">Turno pomeriggio</string>
    <!-- DisplaysMounth -->
    <string name="selectmount">Seleziona il mese desiderato:</string>
    <string name="mounth">Mese:</string>
    <string name="year">Year:</string>
    <string name="title_visual">ORE MENSILI</string>
    <string name="oresettimanali">Ore:</string>
    <string name="straoridinari">Straordinari:</string>
    <!-- SelectHours -->
    <string name="da">Da</string>
    <string name="a">A</string>
    <string name="importante">Importante</string>
    <!-- ManageOvertime && Starling -->
    <string name="ore">ORE:</string>
    <string name="minuti">MINUTI:</string>
    <string name="title_overtime_manage">INSERISCI STRAORDINARI:</string>
    <string name="title_starling_manage">INSERISCI STORNO ORE:</string>

    <!-- DisplaysWorkShift -->
    <string name="riposo">Riposo</string>
    <string name="matt">mattina</string>
    <string name="pome">pomeriggio</string>
    <string name="importanza">RIUNIONE</string>
    <string name="over">ORE FUORI CONTRATTO:</string>
    <string name="display_ore">ORE:</string>
    <string name="inizio">INIZIO:</string>
    <string name="fine">FINE:</string>
    <string name="cancella">Elimina Turno</string>
    <!-- visualYear -->
    <string name="anno">Anno:</string>
    <string name="gennaio">Gennaio</string>
    <string name="febbraio">Febbraio</string>
    <string name="marzo">Marzo</string>
    <string name="aprile">Aprile</string>
    <string name="maggio">Maggio</string>
    <string name="giugno">Giugno</string>
    <string name="luglio">Luglio</string>
    <string name="agosto">Agosto</string>
    <string name="settembre">Settembre</string>
    <string name="ottobre">Ottobre</string>
    <string name="novembre">Novembre</string>
    <string name="dicembre">Dicembre</string>

    <!-- DisplayOreSettimanali -->
    <string name="title_ore_settimanali">Ore settimanali</string>
    <!-- utility button -->
    <string name="action_settings">Settings</string>
    <string name="back_upper">INDIETRO</string>
    <string name="submit_upper">CONFERMA</string>
    <string name="start_upper">ENTRA</string>
    <string name="exit_upper">ESCI</string>

    <!-- DEV utility -->
    <string name="DEV_DB_util">DEVELOPMENT DB UTILITY</string>
    <string name="reset_setting_table">Reset \'SETTING\' Database</string>
    <string name="reset_turn_table">Reset \'TURN\' Database</string>
    <string name="reset_hour_table">Reset \'HOUR\' Database</string>
    <string name="dev_mode">Dev Mode</string>
    <string name="dev_util">Dev Util</string>


    <!-- Messages -->
    <string name="msg_ok">OK</string>
    <string name="msg_orario_inizio_non_corretto_am">L\'orario mattutino non può iniziare dopo le 13</string>
    <string name="msg_orario_inizio_non_corretto_pm">L\'orario pomeridiano non può iniziare prima delle 13</string>
    <string name="msg_orario_non_corretto">Orario non corretto</string>
    <string name="msg_numero_ore">Numero ore (</string>
    <string name="msg_numero_minuti">Numero minuti (</string>
    <string name="msg_t_non_ammesso">) Non ammesso, non può essere maggiore di </string>
    <string name="msg_valore_non_corretto">Valore non corretto</string>
    <string name="msg_tabella_resettate_ok">Tabella resettata con successo</string>
    <string name="msg_tabella_resettate_ko">Impossibile resettare la tabella</string>

    <!-- Tutorial -->
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_WorkShfitManager">prova tutorial</string>
    <string name="tutorial_WorkShfitManager_setting">prova tutorial</string>
    <string name="tutorial_MultiSelectionMenu">prova tutorial</string>
    <string name="tutorial_ManageWorkshift">prova tutorial</string>
    <string name="tutorial_AddOvertime">prova tutorial</string>
    <string name="tutorial_StarlingHour">prova tutorial</string>
    <string name="title_activity_select_overtime">SelectOvertime</string>
    <string name="title_activity_select_staling_hour">SelectStalingHour</string>
    <string name="title_activity_display_settimana">DisplaySettimana</string>
    <string name="title_activity_display_turn">DisplayTurn</string>
    <string name="title_activity_display_hour_week">DisplayHourWeek</string>

</resources>