<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2white"
    tools:context="com.orion.workshiftmanager.WorkShiftManager">

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exitbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/start_upper" />

    <Button
        android:id="@+id/exitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startbutton"
        android:layout_alignParentBottom="true"
        android:text="@string/exit_upper"
        android:layout_alignRight="@+id/startbutton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_app_upper"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/DimGray"
        android:textSize="50sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
