<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.orion.workshiftmanager.display.DisplayTurn">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/iniziovalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inizio"
        android:layout_below="@+id/inizio"
        android:layout_marginTop="16dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/finepomevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/iniziopomevalue"
        android:layout_alignBottom="@+id/iniziopomevalue"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iniziopomevalue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/back_upper" />

    <TextView
        android:id="@+id/mattina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/matt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/finevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/iniziovalue"
        android:layout_alignBottom="@+id/iniziovalue"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pomeriggio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iniziovalue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/pome"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/importante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iniziopomevalue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/importanza"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/orefuoricontratto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orevalue"
        android:layout_centerHorizontal="true"
        android:text="@string/over"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/finepomeriggio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iniziopomevalue"
        android:layout_alignParentRight="true"
        android:text="@string/fine"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/iniziopomeriggio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pomeriggio"
        android:layout_marginTop="27dp"
        android:text="@string/inizio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/iniziopomevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iniziopomeriggio"
        android:layout_marginTop="14dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/inizio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mattina"
        android:text="@string/inizio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mattina"
        android:text="@string/fine"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/overvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pomeriggio"
        android:layout_below="@+id/orefuoricontratto"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/orefuoricontratto"
        android:layout_below="@+id/importante"
        android:layout_toLeftOf="@+id/finepomeriggio"
        android:text="@string/display_ore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/orevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ore"
        android:layout_alignRight="@+id/orefuoricontratto"
        android:layout_below="@+id/ore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
