<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".manageworkshift.ManageOvertime">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/back_upper" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/orestr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/minutistr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minuti"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/orestr"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/ore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orestr"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/title"
        android:ems="10"
        android:inputType="time" />

    <EditText
        android:id="@+id/minuti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:layout_alignTop="@+id/ore"
        android:layout_toRightOf="@+id/title" />


</RelativeLayout>
